# synthmark

./: .gitignore  .travis.yml  Android.mk  CONTRIBUTORS  README.md  testfile
android/: .gitignore  build.gradle  gradlew  gradlew.bat
android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/app/src/main/: Android.mk  AndroidManifest.xml
android/app/src/main/cpp/: OpenSLAudioSink.cpp  OpenSLAudioSink.h  OpenSLHostThread.cpp  OpenSLHostThread.h  native-lib.cpp  native-lib.h
android/app/src/main/java/com/mobileer/synthmark/: AppObject.java  BaseActivity.java  FakeKeyGenerator.java  MainActivity.java  Param.java  SettingsActivity.java
android/app/src/main/java/com/sonodroid/synthmark/: AppObject.java  BaseActivity.java  FakeKeyGenerator.java  MainActivity.java  Param.java  SettingsActivity.java
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml  activity_settings.xml
android/app/src/main/res/values/: strings.xml
android_mk/: .gitignore  Android.mk
android_mk/jni/: Android.mk  Application.mk
apps/: sm_hs_latency.cpp  sm_hs_measure50_app.cpp  sm_pa_measure50_app.cpp  sm_pa_series_app.cpp  sm_print_pitches.cpp  sm_record_one.cpp  sm_test_lookup.cpp  synthmark.cpp
docs/: HowToBuild.md  HowToRunAndroidIntent.md  HowToRunCommand.md  HowToRunForCDD.md  Introduction.md  PrivacyPolicy.md  README.md  Synthesizer.md
ios/: .gitignore
ios/SynthMark/: AppDelegate.h  AppDelegate.mm  AppObject.h  AppObject.mm  ParamTableViewCell.h  ParamTableViewCell.mm  ParamTableViewCell.xib  SettingsViewController.h  SettingsViewController.mm  ViewController.h  ViewController.mm  main.m
ios/SynthMark.xcodeproj/: project.pbxproj
linux/: Makefile
mac_osx/SynthMark.xcodeproj/: project.pbxproj
source/: SynthMark.h  dummy.cpp
source/aaudio/: AAudioHostThread.cpp  AAudioHostThread.h
source/portaudio/: PortAudioSink.h  write_wav.c
source/synth/: BiquadFilter.h  DifferentiatedParabola.h  EnvelopeADSR.h  IncludeMeOnce.h  LookupTable.h  PitchToFrequency.h  SawtoothOscillator.h  SawtoothOscillatorDPW.h  SimpleVoice.h  SineOscillator.h  SquareOscillatorDPW.h  Synthesizer.h  UnitGenerator.h  VoiceBase.h
source/tools/: AdpfWrapper.cpp  AdpfWrapper.h  AudioSinkBase.h  AutomatedTestSuite.h  BinCounter.h  ByteFIFO.h  ChangingVoiceHarness.cpp  ChangingVoiceHarness.h  ClockRampHarness.h  CpuAnalyzer.h  CustomHostCpuManager.h  HostThreadFactory.h  HostTools.cpp  HostTools.h  IAudioSinkCallback.h  ITestHarness.h  JitterMarkHarness.h  LatencyMarkHarness.h  LogTool.h  NativeTest.h  Params.h  RealAudioSink.h  dummy.cpp  (+15 more)
(+8 files in other folders)
